--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fluttertoast: ^8.2.4
   shimmer: ^3.0.0
   cached_network_image: ^3.3.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
